<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PowerLevel">

    <RadioGroup
        android:id="@+id/radioGroupPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="444dp"
        android:layout_marginEnd="210dp"
        android:layout_marginLeft="201dp"
        android:layout_marginRight="210dp"
        android:layout_marginStart="201dp"
        android:layout_marginTop="287dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/powerLow"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/low_power"
            android:onClick="onRadioPowerClicked"/>

        <RadioButton
            android:id="@+id/powerMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_power"
            android:onClick="onRadioPowerClicked"/>

        <RadioButton
            android:id="@+id/powerHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_power"
            android:onClick="onRadioPowerClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/powerLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="140dp"
        android:text="@string/power_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>