<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArmInjuryHistory">

    <RadioGroup
        android:id="@+id/radioGroupArm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="444dp"
        android:layout_marginEnd="210dp"
        android:layout_marginLeft="201dp"
        android:layout_marginRight="210dp"
        android:layout_marginStart="201dp"
        android:layout_marginTop="287dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioArmYes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/arm_injury_yes"
            android:onClick="onRadioArmClicked"/>

        <RadioButton
            android:id="@+id/radioArmNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arm_injury_no"
            android:onClick="onRadioArmClicked"/>


    </RadioGroup>

    <TextView
        android:id="@+id/armInjuryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:layout_marginEnd="86dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="86dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="157dp"
        android:text="@string/have_you_had_arm_injuries_in_the_past"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupArm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>